--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,23 +1,33 @@
-body{
+body {
 	font-family: Helvetica, sans-serif;
 }
 
-#parksmap{
+#parksmap {
 	width: 100%;
-	height: 800px;
+	height: 750px;
 }
 
-#parkspanel{
-	background-color: #BCED91;
+img {
+	width: 100%;
+}
+
+#parkspanel {
+	background-color: #fffff5;
 	padding: 10px;
-	position:fixed;
+	position: fixed;
 	top: 20px;
 	right: 20px;
-	width: 15%;
+	width: 25%;
+	height: 80%;
 	z-index: 99;
 	-moz-box-shadow: 0px 0px 3px #8a8a8a;
   	-webkit-box-shadow: 0px 0px 3px #8a8a8a;
   	box-shadow: 0px 0px 3px #8a8a8a;
+}
+
+#eventsdata {
+	overflow: scroll;
+	height: 75%;
 }
 
 
